# admin_project/docs/swagger.json
@@ -13,6 +13,33 @@
         }
     },
     "paths": {
+        "/addcomment": {
+            "post": {
+                "description": "删除评论",
+                "tags": [
+                    "私有路由"
+                ],
+                "parameters": [
+                    {
+                        "description": "有commentid即可",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/global.Comment"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"msg\":\"删除成功\",\"err\":\"\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/captcha": {
             "get": {
                 "description": "请求base64编码的图像验证码",
@@ -99,6 +126,33 @@
                 "responses": {
                     "200": {
                         "description": "{\"success\":true,\"msg\":\"删除成功\",err:\"error reson\",}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/getcomment": {
+            "get": {
+                "description": "增加评论",
+                "tags": [
+                    "私有路由"
+                ],
+                "parameters": [
+                    {
+                        "description": "一页的评论数和页数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/sysRequest.PageInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"commentlist\":{{},{}},\"msg\":\"添加评论成功\",\"err\":\"\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -207,6 +261,26 @@
         }
     },
     "definitions": {
+        "global.Comment": {
+            "type": "object",
+            "properties": {
+                "commentid": {
+                    "type": "integer"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "creattime": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updatetime": {
+                    "type": "string"
+                }
+            }
+        },
         "sysRequest.Login": {
             "type": "object",
             "properties": {
@@ -221,6 +295,19 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "sysRequest.PageInfo": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "description": "页码",
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "description": "每页大小",
+                    "type": "integer"
                 }
             }
         },
