# admin_project/sysRequest/request.go
@@ -17,3 +17,13 @@ type UpdateUser struct{
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
+type Comment struct {
+	CommentID string `gorm:"unique;not null"`
+	Name string `gorm:"comment:评论者用户名"`
+	Content string `gorm:"comment:评论内容"`
+}
+
+type PageInfo struct {
+	Page     int `json:"page" form:"page"`         // 页码
+	PageSize int `json:"pageSize" form:"pageSize"` // 每页大小
+}
